--- a/Bitbird.Core.Backend.DevTools.ModelGenerator.Net/Bitbird.Core.Backend.DevTools.ModelGenerator.Net.csproj
+++ b/Bitbird.Core.Backend.DevTools.ModelGenerator.Net/Bitbird.Core.Backend.DevTools.ModelGenerator.Net.csproj
@@ -72,6 +72,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="ActionMetaData.cs" />
     <Compile Include="ConsoleArguments.cs" />
     <Compile Include="ControllerMetaData.cs" />
