--- a/Bitbird.Core.Backend.DevTools.RestDoc.Net/Bitbird.Core.Backend.DevTools.RestDoc.Net.csproj
+++ b/Bitbird.Core.Backend.DevTools.RestDoc.Net/Bitbird.Core.Backend.DevTools.RestDoc.Net.csproj
@@ -50,6 +50,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="RestDocGenerator.cs" />
     <Compile Include="ControllerMethodInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
