--- a/Bitbird.Core.Data.NetCore/Bitbird.Core.Data.NetCore.csproj
+++ b/Bitbird.Core.Data.NetCore/Bitbird.Core.Data.NetCore.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <LangVersion>7.3</LangVersion>
-    <PackageId>Bitbird.Core.Data</PackageId>
+    <PackageId>Bitbird.Core.Data.NetCore</PackageId>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
