--- a/Bitbird.Core.Json.Tests/Bitbird.Core.Json.Tests.csproj
+++ b/Bitbird.Core.Json.Tests/Bitbird.Core.Json.Tests.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{D9D27DD1-72DC-42F8-9B7D-3D2A1A4C4D1D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Bitbird.Core.Tests</RootNamespace>
-    <AssemblyName>Bitbird.Core.Tests</AssemblyName>
+    <RootNamespace>Bitbird.Core.Json.Tests</RootNamespace>
+    <AssemblyName>Bitbird.Core.Json.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
