--- a/Bitbird.Core.Net/Bitbird.Core.Net.csproj
+++ b/Bitbird.Core.Net/Bitbird.Core.Net.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{A05492E0-3EE4-4164-8484-E6EC5CE16D0F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Bitbird.Core.Net</RootNamespace>
+    <RootNamespace>Bitbird.Core</RootNamespace>
     <AssemblyName>Bitbird.Core.Net</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -49,9 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Logging\ConsoleLogger.cs" />
-    <Compile Include="Logging\EventLogLogger.cs" />
-    <Compile Include="Logging\Logging.cs" />
+    <Compile Include="Log\ConsoleLogger.cs" />
+    <Compile Include="Log\EventLogLogger.cs" />
+    <Compile Include="Log\Logging.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
