--- a/Bitbird.Core.Data.Net.Tests/Bitbird.Core.Data.Net.Tests.csproj
+++ b/Bitbird.Core.Data.Net.Tests/Bitbird.Core.Data.Net.Tests.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="ModelValidatorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\CodeAnnotations.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
